--- a/activities/investment-odyssey/about.html
+++ b/activities/investment-odyssey/about.html
@@ -120,9 +120,50 @@
                     and learn how different asset classes perform over time.
                 </p>
                 <div class="mt-5">
-                    <a href="index.html" class="cta-button bg-indigo-600 text-white hover:bg-indigo-700">
+                    <a href="game-modes.html" class="cta-button bg-indigo-600 text-white hover:bg-indigo-700">
                         Start Game <i class="fas fa-arrow-right ml-2"></i>
                     </a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Game Modes Section -->
+        <div class="row mb-5">
+            <div class="col-12">
+                <h2 class="text-2xl font-bold section-title">Game Modes</h2>
+            </div>
+            <div class="col-md-6 mb-4">
+                <div class="bg-white p-4 rounded-lg shadow-md h-100">
+                    <div class="feature-icon bg-blue-100 text-blue-600 mx-auto">
+                        <i class="fas fa-user"></i>
+                    </div>
+                    <h3 class="text-xl font-semibold text-center mb-3">Single Player Mode</h3>
+                    <p class="text-gray-600 mb-3">
+                        Play at your own pace and make investment decisions across 20 rounds. Your final portfolio value will be recorded on the leaderboard.
+                    </p>
+                    <ul class="list-group list-group-flush mb-3">
+                        <li class="list-group-item"><i class="fas fa-check-circle text-success mr-2"></i> Start with $10,000 to invest</li>
+                        <li class="list-group-item"><i class="fas fa-check-circle text-success mr-2"></i> Complete all 20 rounds at your own pace</li>
+                        <li class="list-group-item"><i class="fas fa-check-circle text-success mr-2"></i> Your score is saved to the leaderboard</li>
+                        <li class="list-group-item"><i class="fas fa-check-circle text-success mr-2"></i> Available to all players</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-6 mb-4">
+                <div class="bg-white p-4 rounded-lg shadow-md h-100">
+                    <div class="feature-icon bg-green-100 text-green-600 mx-auto">
+                        <i class="fas fa-users"></i>
+                    </div>
+                    <h3 class="text-xl font-semibold text-center mb-3">Class Game Mode</h3>
+                    <p class="text-gray-600 mb-3">
+                        Join your TA's game session where everyone progresses through rounds together. Compare your strategy with classmates in real-time.
+                    </p>
+                    <ul class="list-group list-group-flush mb-3">
+                        <li class="list-group-item"><i class="fas fa-check-circle text-success mr-2"></i> Join your TA's active game session</li>
+                        <li class="list-group-item"><i class="fas fa-check-circle text-success mr-2"></i> Progress through rounds as a class</li>
+                        <li class="list-group-item"><i class="fas fa-check-circle text-success mr-2"></i> See real-time rankings within your section</li>
+                        <li class="list-group-item"><i class="fas fa-check-circle text-success mr-2"></i> Requires TA section selection</li>
+                    </ul>
                 </div>
             </div>
         </div>
