--- a/activities/investment-odyssey/ta-controls.html
+++ b/activities/investment-odyssey/ta-controls.html
@@ -105,6 +105,107 @@
             border-radius: 4px;
             padding: 4px 8px;
         }
+
+        /* Animation for table reveal */
+        @keyframes tableReveal {
+            0% { transform: scale(0.95); opacity: 0.5; }
+            50% { transform: scale(1.02); opacity: 1; }
+            100% { transform: scale(1); opacity: 1; }
+        }
+
+        .table-reveal {
+            animation: tableReveal 1s ease-in-out;
+        }
+
+        /* Animation for next round button */
+        @keyframes pulseButton {
+            0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(40, 167, 69, 0.7); }
+            70% { transform: scale(1.05); box-shadow: 0 0 0 10px rgba(40, 167, 69, 0); }
+            100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(40, 167, 69, 0); }
+        }
+
+        .pulse-button {
+            animation: pulseButton 2s infinite;
+        }
+
+        /* Animation for round badge */
+        @keyframes roundChange {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.3); background-color: #dc3545; }
+            100% { transform: scale(1); }
+        }
+
+        .round-change {
+            animation: roundChange 1s ease;
+        }
+
+        /* Ticker styles */
+        .ticker-container {
+            width: 100%;
+            overflow: hidden;
+            background-color: #212529;
+            border-radius: 0;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+
+        .ticker-wrap {
+            width: 100%;
+            padding: 10px 0;
+            overflow: hidden;
+        }
+
+        .ticker {
+            display: flex;
+            white-space: nowrap;
+            animation: ticker 30s linear infinite;
+        }
+
+        .ticker-item {
+            display: inline-flex;
+            align-items: center;
+            padding: 0 20px;
+            font-weight: bold;
+            color: white;
+        }
+
+        .ticker-item.up {
+            color: #28a745;
+        }
+
+        .ticker-item.down {
+            color: #dc3545;
+        }
+
+        @keyframes ticker {
+            0% { transform: translateX(100%); }
+            100% { transform: translateX(-100%); }
+        }
+
+        /* Confetti animation for big price changes */
+        .confetti-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 9999;
+            overflow: hidden;
+        }
+
+        .confetti {
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            background-color: #f00;
+            opacity: 0.8;
+            animation: confetti-fall 5s linear forwards;
+        }
+
+        @keyframes confetti-fall {
+            0% { transform: translateY(-100px) rotate(0deg); opacity: 1; }
+            100% { transform: translateY(100vh) rotate(720deg); opacity: 0; }
+        }
     </style>
 </head>
 <body class="bg-gray-50">
@@ -167,71 +268,115 @@
                 </div>
             </div>
 
+            <!-- Confetti Container for Animations -->
+            <div id="confetti-container" class="confetti-container"></div>
+
             <!-- Active Game Controls -->
             <div id="active-game-controls" class="d-none">
-                <h4 class="mb-3">Active Game Controls</h4>
-                <div class="game-controls mb-4">
-                    <div class="row align-items-center">
-                        <div class="col-md-3 text-center mb-3 mb-md-0">
-                            <div class="round-badge mx-auto mb-2" id="current-round">0</div>
-                            <p class="mb-0">Current Round</p>
+                <div class="card mb-4 shadow-lg">
+                    <div class="card-header bg-dark text-white">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h3 class="mb-0"><i class="fas fa-gamepad mr-2"></i> Investment Odyssey Game Controls</h3>
+                            <div>
+                                <span class="badge badge-light" id="game-status-badge">In Progress</span>
+                            </div>
                         </div>
-                        <div class="col-md-3 text-center mb-3 mb-md-0">
-                            <h5 id="max-rounds">20</h5>
-                            <p class="mb-0">Total Rounds</p>
-                        </div>
-                        <div class="col-md-3 text-center mb-3 mb-md-0">
-                            <h5 id="participant-count">0</h5>
-                            <p class="mb-0">Participants</p>
-                        </div>
-                        <div class="col-md-3 text-center">
-                            <button id="next-round-btn" class="btn btn-success btn-lg">
-                                <i class="fas fa-arrow-right mr-2"></i> Next Round
-                            </button>
+                    </div>
+                    <div class="card-body">
+                        <div class="game-controls mb-4">
+                            <div class="row align-items-center">
+                                <div class="col-md-3 text-center mb-3 mb-md-0">
+                                    <div class="round-badge mx-auto mb-2" id="current-round">0</div>
+                                    <h5 class="mb-0">Current Round</h5>
+                                </div>
+                                <div class="col-md-3 text-center mb-3 mb-md-0">
+                                    <div class="progress" style="height: 10px;">
+                                        <div id="round-progress" class="progress-bar bg-success" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                    <h5 class="mt-2" id="progress-text">0 / <span id="max-rounds">20</span></h5>
+                                    <p class="mb-0 text-muted">Game Progress</p>
+                                </div>
+                                <div class="col-md-3 text-center mb-3 mb-md-0">
+                                    <div class="d-flex justify-content-center align-items-center">
+                                        <i class="fas fa-users fa-2x text-primary mr-2"></i>
+                                        <h3 id="participant-count" class="mb-0">0</h3>
+                                    </div>
+                                    <p class="mb-0 text-muted">Participants</p>
+                                </div>
+                                <div class="col-md-3 text-center">
+                                    <button id="next-round-btn" class="btn btn-success btn-lg pulse-button">
+                                        <i class="fas fa-arrow-right mr-2"></i> Next Round
+                                    </button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Market Data - Similar to user interface -->
-                <div class="row mb-4">
-                    <div class="col-12">
-                        <div class="card market-data-card">
-                            <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center" style="padding: 1rem; border-bottom: 3px solid #dc3545;">
-                                <div class="d-flex align-items-center">
-                                    <i class="fas fa-chart-line mr-2" style="font-size: 1.8rem;"></i>
-                                    <h3 class="mb-0" style="font-size: 1.5rem;">Live Market Data</h3>
-                                </div>
-                                <div>
-                                    <span class="badge badge-danger" style="font-size: 1rem; padding: 0.5rem;">
-                                        <i class="fas fa-clock mr-1"></i> Round <span id="market-round-display">0</span>
-                                    </span>
-                                </div>
-                            </div>
-                            <div class="card-body p-0">
-                                <div class="table-responsive">
-                                    <table class="table table-sm table-hover mb-0" id="market-data-table">
-                                        <thead>
-                                            <tr>
-                                                <th>Asset</th>
-                                                <th>Price</th>
-                                                <th>Change</th>
-                                                <th>Chart</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody id="ta-asset-prices-table">
-                                            <!-- Asset prices will be populated here dynamically -->
-                                            <tr>
-                                                <td colspan="4" class="text-center">
-                                                    <div class="spinner-border spinner-border-sm text-primary" role="status">
-                                                        <span class="sr-only">Loading...</span>
-                                                    </div>
-                                                    <span class="ml-2">Loading market data...</span>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
+                <!-- Market Data Dashboard -->
+                <div class="card shadow-lg mb-4">
+                    <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center" style="padding: 1rem; border-bottom: 3px solid #dc3545;">
+                        <div class="d-flex align-items-center">
+                            <i class="fas fa-chart-line mr-2" style="font-size: 1.8rem;"></i>
+                            <h3 class="mb-0" style="font-size: 1.5rem;">Live Market Data</h3>
+                        </div>
+                        <div>
+                            <span class="badge badge-danger" style="font-size: 1rem; padding: 0.5rem;">
+                                <i class="fas fa-clock mr-1"></i> Round <span id="market-round-display">0</span>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="card-body p-0">
+                        <!-- Asset Price Ticker -->
+                        <div class="ticker-container mb-3">
+                            <div class="ticker-wrap">
+                                <div class="ticker" id="price-ticker">
+                                    <!-- Asset prices will be populated here dynamically -->
                                 </div>
                             </div>
+                        </div>
+
+                        <div class="table-responsive">
+                            <table class="table table-sm table-hover mb-0" id="market-data-table">
+                                <thead class="thead-dark">
+                                    <tr>
+                                        <th>Asset</th>
+                                        <th>Price</th>
+                                        <th>Change</th>
+                                        <th>Chart</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="ta-asset-prices-table">
+                                    <!-- Asset prices will be populated here dynamically -->
+                                    <tr>
+                                        <td colspan="4" class="text-center py-4">
+                                            <div class="spinner-border text-primary" role="status">
+                                                <span class="sr-only">Loading...</span>
+                                            </div>
+                                            <p class="mt-2 mb-0">Loading market data...</p>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Game Instructions -->
+                <div class="card shadow-lg mb-4">
+                    <div class="card-header bg-info text-white">
+                        <h4 class="mb-0"><i class="fas fa-info-circle mr-2"></i> TA Instructions</h4>
+                    </div>
+                    <div class="card-body">
+                        <div class="alert alert-warning">
+                            <h5><i class="fas fa-exclamation-triangle mr-2"></i> Important Notes</h5>
+                            <ul class="mb-0">
+                                <li>Click <strong>Next Round</strong> to advance the game to the next round.</li>
+                                <li>Students can trade assets in each round before you advance.</li>
+                                <li>Make the price reveals dramatic! Build suspense before clicking Next Round.</li>
+                                <li>Encourage discussion about market trends and investment strategies.</li>
+                                <li>The game will automatically end after 20 rounds.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
