--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -245,6 +245,9 @@
                                         <span class="badge badge-info">Waiting for TA to advance rounds</span>
                                     </div>
                                 </div>
+                                <div id="cash-injection-alert" class="alert alert-info py-1 px-2 mt-2 mb-2" style="display: none;">
+                                    <strong>Cash Injection:</strong> $<span id="cash-injection-amount">0.00</span> has been added to your account.
+                                </div>
                                 <div class="progress mt-2">
                                     <div id="round-progress" class="progress-bar bg-success" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
                                 </div>
@@ -380,8 +383,29 @@
                                         </form>
                                     </div>
                                     <div class="col-md-6">
+                                        <h5 class="mb-1" style="font-size: 0.9rem;">Cash Allocation</h5>
+                                        <div class="form-group mb-1">
+                                            <label for="cash-percentage" style="font-size: 0.85rem; margin-bottom: 0.25rem;">Percentage of Cash: <span id="cash-percentage-display">50</span>%</label>
+                                            <input type="range" class="form-control-range" id="cash-percentage" min="0" max="100" value="50" style="height: 1rem;">
+                                        </div>
+                                        <div class="form-group mb-1">
+                                            <label style="font-size: 0.85rem; margin-bottom: 0.25rem;">Amount: $<span id="cash-amount-display">5000.00</span></label>
+                                        </div>
+                                        <div class="form-group mb-2">
+                                            <label style="font-size: 0.85rem; margin-bottom: 0.25rem;">Remaining: $<span id="remaining-cash-display">5000.00</span></label>
+                                        </div>
+                                        <div class="form-group mb-2">
+                                            <button id="quick-buy-btn" class="btn btn-success btn-sm btn-block">Quick Buy Selected Asset</button>
+                                        </div>
+                                        <hr style="margin: 0.5rem 0;">
+                                        <div class="d-flex justify-content-between">
+                                            <button id="buy-all-btn" class="btn btn-success btn-sm">Distribute Cash Evenly</button>
+                                            <button id="sell-all-btn" class="btn btn-danger btn-sm">Sell All Assets</button>
+                                        </div>
+
+                                        <hr style="margin: 1rem 0;">
                                         <h5 class="mb-1" style="font-size: 0.9rem;">Class Leaderboard</h5>
-                                        <div class="leaderboard-mini" style="max-height: 250px; overflow-y: auto;">
+                                        <div class="leaderboard-mini" style="max-height: 150px; overflow-y: auto;">
                                             <table class="table table-sm table-hover mb-0">
                                                 <thead class="thead-light">
                                                     <tr>
@@ -403,11 +427,6 @@
                                                     </tr>
                                                 </tbody>
                                             </table>
-                                        </div>
-                                        <hr style="margin: 0.5rem 0;">
-                                        <div class="d-flex justify-content-between mt-2">
-                                            <button id="buy-all-btn" class="btn btn-success btn-sm">Distribute Cash Evenly</button>
-                                            <button id="sell-all-btn" class="btn btn-danger btn-sm">Sell All Assets</button>
                                         </div>
                                     </div>
                                 </div>
