--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -456,6 +456,57 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Comparative Asset Performance -->
+                <div class="row mt-4">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
+                                <h3>Comparative Asset Performance</h3>
+                            </div>
+                            <div class="card-body">
+                                <div style="height: 400px; width: 100%; position: relative;">
+                                    <canvas id="comparative-returns-chart"></canvas>
+                                    <button id="reset-comparative-zoom" class="btn btn-sm btn-secondary" style="position: absolute; top: 10px; right: 10px;">Reset Zoom</button>
+                                </div>
+                                <div class="mt-3 asset-toggle-container">
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                            <div class="form-check mb-2">
+                                                <input class="form-check-input" type="checkbox" id="show-sp500" checked>
+                                                <label class="form-check-label" for="show-sp500">S&P 500</label>
+                                            </div>
+                                            <div class="form-check mb-2">
+                                                <input class="form-check-input" type="checkbox" id="show-bonds" checked>
+                                                <label class="form-check-label" for="show-bonds">Bonds</label>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="form-check mb-2">
+                                                <input class="form-check-input" type="checkbox" id="show-real-estate" checked>
+                                                <label class="form-check-label" for="show-real-estate">Real Estate</label>
+                                            </div>
+                                            <div class="form-check mb-2">
+                                                <input class="form-check-input" type="checkbox" id="show-gold" checked>
+                                                <label class="form-check-label" for="show-gold">Gold</label>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="form-check mb-2">
+                                                <input class="form-check-input" type="checkbox" id="show-commodities" checked>
+                                                <label class="form-check-label" for="show-commodities">Commodities</label>
+                                            </div>
+                                            <div class="form-check mb-2">
+                                                <input class="form-check-input" type="checkbox" id="show-bitcoin" checked>
+                                                <label class="form-check-label" for="show-bitcoin">Bitcoin</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -470,6 +521,10 @@
     <script src="js/game-ui.js"></script>
     <script src="js/game-trading.js"></script>
     <script src="js/class-game.js"></script>
+
+    <!-- Chart.js Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom"></script>
 
     <!-- Other Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
