--- a/activities/investment-odyssey/ta-controls.html
+++ b/activities/investment-odyssey/ta-controls.html
@@ -429,6 +429,9 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="../../js/firebase-auth-config.js"></script>
 
+    <!-- Service Bridge to ensure Service is available -->
+    <script src="js/service-bridge.js"></script>
+
     <!-- TA Controls Script -->
     <script src="js/ta-controls.js"></script>
 
