--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -402,32 +402,6 @@
                                             <button id="buy-all-btn" class="btn btn-success btn-sm">Distribute Cash Evenly</button>
                                             <button id="sell-all-btn" class="btn btn-danger btn-sm">Sell All Assets</button>
                                         </div>
-
-                                        <hr style="margin: 1rem 0;">
-                                        <h5 class="mb-1" style="font-size: 0.9rem;">Class Leaderboard</h5>
-                                        <div class="leaderboard-mini" style="max-height: 150px; overflow-y: auto;">
-                                            <table class="table table-sm table-hover mb-0">
-                                                <thead class="thead-light">
-                                                    <tr>
-                                                        <th scope="col" width="10%">Rank</th>
-                                                        <th scope="col" width="40%">Player</th>
-                                                        <th scope="col" width="25%">Portfolio</th>
-                                                        <th scope="col" width="25%">Return</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody id="class-leaderboard-body">
-                                                    <!-- Will be populated dynamically -->
-                                                    <tr>
-                                                        <td colspan="4" class="text-center py-3">
-                                                            <div class="spinner-border spinner-border-sm text-primary" role="status">
-                                                                <span class="sr-only">Loading...</span>
-                                                            </div>
-                                                            <span class="ml-2">Loading leaderboard...</span>
-                                                        </td>
-                                                    </tr>
-                                                </tbody>
-                                            </table>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -451,6 +425,43 @@
                                         <h5 class="text-center mb-3">Portfolio Allocation</h5>
                                         <canvas id="portfolio-allocation-chart" width="200" height="200"></canvas>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Class Leaderboard -->
+                <div class="row mt-4">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-header bg-success text-white d-flex justify-content-between align-items-center">
+                                <h3>Class Leaderboard</h3>
+                                <span class="badge badge-light">Players: <span id="player-count">0</span></span>
+                            </div>
+                            <div class="card-body p-0">
+                                <div class="leaderboard-container" style="max-height: 300px; overflow-y: auto;">
+                                    <table class="table table-hover mb-0">
+                                        <thead class="thead-light">
+                                            <tr>
+                                                <th scope="col" width="10%">Rank</th>
+                                                <th scope="col" width="40%">Player</th>
+                                                <th scope="col" width="25%">Portfolio</th>
+                                                <th scope="col" width="25%">Return</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="class-leaderboard-body">
+                                            <!-- Will be populated dynamically -->
+                                            <tr>
+                                                <td colspan="4" class="text-center py-3">
+                                                    <div class="spinner-border spinner-border-sm text-primary" role="status">
+                                                        <span class="sr-only">Loading...</span>
+                                                    </div>
+                                                    <span class="ml-2">Loading leaderboard...</span>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
                                 </div>
                             </div>
                         </div>
