--- a/activities/investment-odyssey/ta-controls.html
+++ b/activities/investment-odyssey/ta-controls.html
@@ -85,23 +85,27 @@
 
         /* Animation for price reveal */
         @keyframes priceReveal {
-            0% { opacity: 0; transform: translateY(20px); }
-            100% { opacity: 1; transform: translateY(0); }
+            0% { opacity: 0; transform: translateY(30px) scale(0.8); }
+            50% { opacity: 1; transform: translateY(-5px) scale(1.05); }
+            100% { opacity: 1; transform: translateY(0) scale(1); }
         }
 
         .price-reveal {
-            animation: priceReveal 0.6s ease forwards;
+            animation: priceReveal 1.2s cubic-bezier(0.34, 1.56, 0.64, 1) forwards;
             opacity: 0;
         }
 
         /* Animation for price value */
         @keyframes valueFlash {
             0% { background-color: rgba(255, 193, 7, 0.2); }
+            50% { background-color: rgba(255, 193, 7, 0.5); }
             100% { background-color: transparent; }
         }
 
         .price-value {
-            animation: valueFlash 1.5s ease;
+            font-size: 1.2rem;
+            font-weight: bold;
+            animation: valueFlash 2s ease forwards;
             border-radius: 4px;
             padding: 4px 8px;
         }
