--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -423,7 +423,9 @@
                                     </div>
                                     <div class="col-md-4" style="height: 400px;">
                                         <h5 class="text-center mb-3">Portfolio Allocation</h5>
-                                        <canvas id="portfolio-allocation-chart" width="200" height="200"></canvas>
+                                        <div style="height: 300px; width: 100%; display: flex; justify-content: center; align-items: center;">
+                                            <canvas id="portfolio-allocation-chart" width="300" height="300"></canvas>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
