--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -370,11 +370,14 @@
                                                 </select>
                                             </div>
                                             <div class="form-group mb-1">
-                                                <label for="quantity-input" style="font-size: 0.85rem; margin-bottom: 0.25rem;">Quantity</label>
-                                                <input type="number" class="form-control form-control-sm" id="quantity-input" min="0.01" step="0.01" required>
+                                                <label style="font-size: 0.85rem;">Current Price: $<span id="current-price-display">0.00</span></label>
                                             </div>
                                             <div class="form-group mb-1">
-                                                <label style="font-size: 0.85rem;">Current Price: $<span id="current-price-display">0.00</span></label>
+                                                <label for="amount-input" style="font-size: 0.85rem; margin-bottom: 0.25rem;">Amount ($)</label>
+                                                <input type="number" class="form-control form-control-sm" id="amount-input" min="1" step="1" required>
+                                            </div>
+                                            <div class="form-group mb-1">
+                                                <label style="font-size: 0.85rem;">Quantity: <span id="quantity-display">0.00</span></label>
                                             </div>
                                             <div class="form-group mb-2">
                                                 <label style="font-size: 0.85rem;">Total Cost: $<span id="total-cost-display">0.00</span></label>
