--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -388,8 +388,8 @@
                                     <div class="col-md-6">
                                         <h5 class="mb-1" style="font-size: 0.9rem;">Cash Allocation</h5>
                                         <div class="form-group mb-1">
-                                            <label for="cash-percentage" style="font-size: 0.85rem; margin-bottom: 0.25rem;">Percentage of Cash: <span id="cash-percentage-display">50</span>%</label>
-                                            <input type="range" class="form-control-range" id="cash-percentage" min="0" max="100" value="50" style="height: 1rem;">
+                                            <label for="cash-percentage" style="font-size: 0.85rem; margin-bottom: 0.25rem;">Percentage of Cash to Spend: <span id="cash-percentage-display">50</span>%</label>
+                                            <input type="range" class="form-control-range" id="cash-percentage" min="0" max="100" value="50" step="1" style="height: 1rem;">
                                         </div>
                                         <div class="form-group mb-1">
                                             <label style="font-size: 0.85rem; margin-bottom: 0.25rem;">Amount: $<span id="cash-amount-display">5000.00</span></label>
