--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -386,21 +386,10 @@
                                         </form>
                                     </div>
                                     <div class="col-md-6">
-                                        <h5 class="mb-1" style="font-size: 0.9rem;">Quick Buy</h5>
+                                        <h5 class="mb-1" style="font-size: 0.9rem;">Portfolio Actions</h5>
                                         <div class="form-group mb-2">
-                                            <label for="buy-amount" style="font-size: 0.85rem; margin-bottom: 0.25rem;">Amount to spend:</label>
-                                            <div class="input-group input-group-sm">
-                                                <div class="input-group-prepend">
-                                                    <span class="input-group-text">$</span>
-                                                </div>
-                                                <input type="number" class="form-control" id="buy-amount" min="1" step="1" placeholder="Enter amount">
-                                            </div>
-                                            <small class="form-text text-muted" style="font-size: 0.75rem;">Available cash: $<span id="available-cash-display">0.00</span></small>
+                                            <small class="form-text text-muted" style="font-size: 0.85rem;">Available cash: $<span id="available-cash-display">0.00</span></small>
                                         </div>
-                                        <div class="form-group mb-2">
-                                            <button id="quick-buy-btn" class="btn btn-success btn-sm btn-block">Quick Buy Selected Asset</button>
-                                        </div>
-                                        <hr style="margin: 0.5rem 0;">
                                         <div class="d-flex justify-content-between">
                                             <button id="buy-all-btn" class="btn btn-success btn-sm">Distribute Cash Evenly</button>
                                             <button id="sell-all-btn" class="btn btn-danger btn-sm">Sell All Assets</button>
